--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,6 @@ dependencies {
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     //RxPermission
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.1@aar'
+    //http server
+    compile 'org.nanohttpd:nanohttpd:2.3.1'
 }
