--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,6 @@ dependencies {
     compile 'org.nanohttpd:nanohttpd:2.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     //aa
+
+    compile 'com.huawei.android.hms:push:2.5.2.300'
 }
