--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="com.baidu.action.RECOGNIZE_SPEECH" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
@@ -31,6 +33,79 @@
         <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
         <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
+        <uses-permission android:name="android.permission.RECORD_AUDIO" />
+        <uses-permission android:name="android.permission.INTERNET" />
+        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+        <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+        <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+        <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+        <!-- begin: baidu speech sdk-->
+        <!-- 请填写应用实际的APP_ID -->
+        <meta-data android:name="com.baidu.speech.APP_ID" android:value="10045784"/>
+        <!-- 请填写应用实际的API_KEY -->
+        <meta-data android:name="com.baidu.speech.API_KEY" android:value="mlq0DyIA3ydUYxzLSIeKyCHS"/>
+        <!-- 请填写应用实际的SECRET_KEY -->
+        <meta-data android:name="com.baidu.speech.SECRET_KEY" android:value="86376826e9662758703b8a32d260e290"/>
+        <!--<service android:name="com.baidu.speech.VoiceRecognitionService" android:exported="false" />-->
+
+        <!--**************************HW push start***********************-->
+        <!-- value的值“appid”用实际申请的应用ID替换 -->
+        <meta-data
+            android:name="com.huawei.hms.client.appid"
+            android:value="appid"/>
+        <!--BridgeActivity定义了HMS-SDK中一些跳转所需要的透明页面-->
+        <activity
+            android:name="com.huawei.hms.activity.BridgeActivity"
+            android:configChanges="orientation|locale|screenSize|layoutDirection|fontScale"
+            android:excludeFromRecents="true"
+            android:exported="false"
+            android:hardwareAccelerated="true"
+            android:theme="@android:style/Theme.Translucent" >
+            <meta-data
+                android:name="hwc-theme"
+                android:value="androidhwext:style/Theme.Emui.Translucent" />
+        </activity>
+        <!--UpdateProvider用于HMS-SDK引导升级HMS，提供给系统安装器读取升级文件-->
+        <provider
+            android:name="com.huawei.hms.update.provider.UpdateProvider"
+        android:authorities="com.liuxl.godriving.update.provider"
+        android:exported="false"
+        android:grantUriPermissions="true"/>
+        <!--HMS-SDK引导升级HMS功能，访问OTA服务器需要网络权限-->
+        <uses-permission android:name="android.permission.INTERNET" />
+        <!--HMS-SDK引导升级HMS功能，保存下载的升级包需要SD卡写权限-->
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+        <!--检测网络状态-->
+        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+        <!--检测wifi状态-->
+        <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+        <!--为了获取用户手机的IMEI，用来唯一的标识用户。-->
+        <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+
+        <!-- 用来接收广播信息 xxx.xx.xx为CP自定义的广播名称，比如: com.huawei.hmssample. HuaweiPushRevicer -->
+        <receiver android:name=".service.HWReceiver" >
+            <intent-filter>
+                <!-- 必须,用于接收TOKEN -->
+                <action android:name="com.huawei.android.push.intent.REGISTRATION" />
+                <!-- 必须，用于接收消息 -->
+                <action android:name="com.huawei.android.push.intent.RECEIVE" />
+                <!-- 可选，用于点击通知栏或通知栏上的按钮后触发onEvent回调 -->
+                <action android:name="com.huawei.android.push.intent.CLICK" />
+                <!-- 可选，查看PUSH通道是否连接，不查看则不需要 -->
+                <action android:name="com.huawei.intent.action.PUSH_STATE" />
+            </intent-filter>
+        </receiver>
+        <!--接收通道发来的通知栏消息-->
+        <receiver android:name="com.huawei.hms.support.api.push.PushEventReceiver" >
+            <intent-filter>
+                <!-- 接收通道发来的通知栏消息，兼容老版本PUSH -->
+                <action android:name="com.huawei.intent.action.PUSH" />
+            </intent-filter>
+        </receiver>
+
+        <!--*********************HW push end*************************-->
     </application>
 
 </manifest>
