--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,23 +47,23 @@ dependencies {
 //    testCompile 'junit:junit:4.12'
     //注解与bindview
     compile 'com.jakewharton:butterknife:8.4.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+//    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     //RxJava
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
-    //RxDownload
-    compile 'zlc.season:rxdownload2:1.0.4'
-    //retrofit
-    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    //RxPermission
-    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.1@aar'
-    //http server
-    compile 'org.nanohttpd:nanohttpd:2.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    //aa
-
-    compile 'com.huawei.android.hms:push:2.5.2.300'
+//    //RxDownload
+//    compile 'zlc.season:rxdownload2:1.0.4'
+//    //retrofit
+//    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+//    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+//    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+//    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+//    //RxPermission
+//    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.1@aar'
+//    //http server
+//    compile 'org.nanohttpd:nanohttpd:2.3.1'
+//    compile 'com.android.support:recyclerview-v7:25.3.1'
+//    //aa
+//
+////    compile 'com.huawei.android.hms:push:2.5.2.300'
 }
