--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ dependencies {
 //    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.1@aar'
 //    //http server
 //    compile 'org.nanohttpd:nanohttpd:2.3.1'
-//    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
 //    //aa
 //
 ////    compile 'com.huawei.android.hms:push:2.5.2.300'
