--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity android:name=".ui.activity.SettingActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
-        <service android:name=".service.FloatWindowService"/>
+        <!--<service android:name=".service.FloatWindowService"/>-->
         <service android:name=".service.SpeakerService"/>
 
         <service
@@ -55,49 +55,49 @@
         <meta-data android:name="com.baidu.speech.SECRET_KEY" android:value="86376826e9662758703b8a32d260e290"/>
         <!--<service android:name="com.baidu.speech.VoiceRecognitionService" android:exported="false" ></service>-->
 
-        <!--**************************HW push start***********************-->
-        <!-- value的值“appid”用实际申请的应用ID替换 -->
-        <meta-data
-            android:name="com.huawei.hms.client.appid"
-            android:value="appid"/>
-        <!--BridgeActivity定义了HMS-SDK中一些跳转所需要的透明页面-->
-        <activity
-            android:name="com.huawei.hms.activity.BridgeActivity"
-            android:configChanges="orientation|locale|screenSize|layoutDirection|fontScale"
-            android:excludeFromRecents="true"
-            android:exported="false"
-            android:hardwareAccelerated="true"
-            android:theme="@android:style/Theme.Translucent" >
-            <meta-data
-                android:name="hwc-theme"
-                android:value="androidhwext:style/Theme.Emui.Translucent" />
-        </activity>
-        <!--UpdateProvider用于HMS-SDK引导升级HMS，提供给系统安装器读取升级文件-->
-        <provider
-            android:name="com.huawei.hms.update.provider.UpdateProvider"
-        android:authorities="com.liuxl.godriving.update.provider"
-        android:exported="false"
-        android:grantUriPermissions="true"/>
-        <!-- 用来接收广播信息 xxx.xx.xx为CP自定义的广播名称，比如: com.huawei.hmssample. HuaweiPushRevicer -->
-        <receiver android:name=".service.HWReceiver" >
-            <intent-filter>
-                <!-- 必须,用于接收TOKEN -->
-                <action android:name="com.huawei.android.push.intent.REGISTRATION" />
-                <!-- 必须，用于接收消息 -->
-                <action android:name="com.huawei.android.push.intent.RECEIVE" />
-                <!-- 可选，用于点击通知栏或通知栏上的按钮后触发onEvent回调 -->
-                <action android:name="com.huawei.android.push.intent.CLICK" />
-                <!-- 可选，查看PUSH通道是否连接，不查看则不需要 -->
-                <action android:name="com.huawei.intent.action.PUSH_STATE" />
-            </intent-filter>
-        </receiver>
-        <!--接收通道发来的通知栏消息-->
-        <receiver android:name="com.huawei.hms.support.api.push.PushEventReceiver" >
-            <intent-filter>
-                <!-- 接收通道发来的通知栏消息，兼容老版本PUSH -->
-                <action android:name="com.huawei.intent.action.PUSH" />
-            </intent-filter>
-        </receiver>
+        <!--&lt;!&ndash;**************************HW push start***********************&ndash;&gt;-->
+        <!--&lt;!&ndash; value的值“appid”用实际申请的应用ID替换 &ndash;&gt;-->
+        <!--<meta-data-->
+            <!--android:name="com.huawei.hms.client.appid"-->
+            <!--android:value="appid"/>-->
+        <!--&lt;!&ndash;BridgeActivity定义了HMS-SDK中一些跳转所需要的透明页面&ndash;&gt;-->
+        <!--<activity-->
+            <!--android:name="com.huawei.hms.activity.BridgeActivity"-->
+            <!--android:configChanges="orientation|locale|screenSize|layoutDirection|fontScale"-->
+            <!--android:excludeFromRecents="true"-->
+            <!--android:exported="false"-->
+            <!--android:hardwareAccelerated="true"-->
+            <!--android:theme="@android:style/Theme.Translucent" >-->
+            <!--<meta-data-->
+                <!--android:name="hwc-theme"-->
+                <!--android:value="androidhwext:style/Theme.Emui.Translucent" />-->
+        <!--</activity>-->
+        <!--&lt;!&ndash;UpdateProvider用于HMS-SDK引导升级HMS，提供给系统安装器读取升级文件&ndash;&gt;-->
+        <!--<provider-->
+            <!--android:name="com.huawei.hms.update.provider.UpdateProvider"-->
+        <!--android:authorities="com.liuxl.godriving.update.provider"-->
+        <!--android:exported="false"-->
+        <!--android:grantUriPermissions="true"/>-->
+        <!--&lt;!&ndash; 用来接收广播信息 xxx.xx.xx为CP自定义的广播名称，比如: com.huawei.hmssample. HuaweiPushRevicer &ndash;&gt;-->
+        <!--<receiver android:name=".service.HWReceiver" >-->
+            <!--<intent-filter>-->
+                <!--&lt;!&ndash; 必须,用于接收TOKEN &ndash;&gt;-->
+                <!--<action android:name="com.huawei.android.push.intent.REGISTRATION" />-->
+                <!--&lt;!&ndash; 必须，用于接收消息 &ndash;&gt;-->
+                <!--<action android:name="com.huawei.android.push.intent.RECEIVE" />-->
+                <!--&lt;!&ndash; 可选，用于点击通知栏或通知栏上的按钮后触发onEvent回调 &ndash;&gt;-->
+                <!--<action android:name="com.huawei.android.push.intent.CLICK" />-->
+                <!--&lt;!&ndash; 可选，查看PUSH通道是否连接，不查看则不需要 &ndash;&gt;-->
+                <!--<action android:name="com.huawei.intent.action.PUSH_STATE" />-->
+            <!--</intent-filter>-->
+        <!--</receiver>-->
+        <!--&lt;!&ndash;接收通道发来的通知栏消息&ndash;&gt;-->
+        <!--<receiver android:name="com.huawei.hms.support.api.push.PushEventReceiver" >-->
+            <!--<intent-filter>-->
+                <!--&lt;!&ndash; 接收通道发来的通知栏消息，兼容老版本PUSH &ndash;&gt;-->
+                <!--<action android:name="com.huawei.intent.action.PUSH" />-->
+            <!--</intent-filter>-->
+        <!--</receiver>-->
         <!--*********************HW push end*************************-->
     </application>
     <!--HMS-SDK引导升级HMS功能，访问OTA服务器需要网络权限-->
