--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
-
+def buildTime() {
+    return new Date().format("yyyyMMdd", TimeZone.getTimeZone("UTC"))
+}
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
@@ -17,7 +19,13 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            //混淆
+            minifyEnabled true
+            //Zipalign优化
+            zipAlignEnabled true
+            // 移除无用的resource文件
+            shrinkResources false
+            //前一部分代表系统默认的android程序的混淆文件，该文件已经包含了基本的混淆声明
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -33,6 +41,73 @@ android {
     sourceSets{
         main {
             jniLibs.srcDirs = ['libs']
+        }
+    }
+
+
+    android.applicationVariants.all { variant ->
+        variant.outputs.each { output ->
+            def outputFile = output.outputFile
+            def fileName
+            def buildName
+            if (outputFile != null && outputFile.name.endsWith('.apk')) {
+                variant.productFlavors.each { product ->
+                    buildName = product.name
+                    //这里修改apk文件名
+                    if (variant.buildType.name.equals('release')) {
+                        fileName = "gd-${buildName}-${defaultConfig.versionCode}-release.apk"
+                    } else if (variant.buildType.name.equals('debug')) {
+                        fileName = "gd${buildName}-${defaultConfig.versionCode}-debug.apk"
+                    }
+                    output.outputFile = new File(outputFile.parent, fileName)
+                }
+            }
+        }
+    }
+
+    applicationVariants.all { variant ->    //批量修改Apk名字
+        variant.outputs.each { output ->
+            if (!variant.buildType.isDebuggable()) {
+                //获取签名的名字 variant.signingConfig.name
+                //要被替换的源字符串
+                def sourceFile = "-${variant.flavorName}-${variant.buildType.name}"
+                //替换的字符串
+                def replaceFile = "_V${variant.versionName}_${variant.flavorName}_${variant.buildType.name}_${buildTime()}"
+                output.outputFile.name.replace(sourceFile, replaceFile)
+            } else {
+                //要被替换的源字符串
+                def sourceFile = "-${variant.flavorName}-${variant.buildType.name}"
+                //替换的字符串
+                def replaceFile = "_V2${variant.versionName}_${variant.flavorName}_${variant.buildType.name}_${buildTime()}"
+                output.outputFile.name.replace(sourceFile, replaceFile)
+            }
+        }
+    }
+    productFlavors {
+
+        fys_test {}
+        official {}
+        qq_group_test {}
+        sogou {}
+        _360 {}
+        anzhi {}
+        gfan {}
+        huawei {}
+        yingyongbao {}
+        meizu {}
+        mumayi {}
+        aliapp {}
+        appchina {}
+        baidu {}
+        _91 {}
+        anzhuom {}
+        oppo {}
+        vivo {}
+        xiaomi {}
+        market {}
+
+
+        productFlavors.all { flavor -> flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
         }
     }
 }
