--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,19 @@
             </intent-filter>
         </service>
 
+        <service
+            android:name=".service.CenterAccessibilityService"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/accessibility"/>
+        </service>
+
         <!--<receiver android:name=".PhoneReceiver">-->
             <!--<intent-filter android:priority="1000">-->
                 <!--<action android:name="android.intent.action.NEW_OUTGOING_CALL"/>-->
